# specimens

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CLAUDE.md  README.md  TODO.md  critic_scopes.yaml  lib.libsonnet  snapshots.yaml  todo-add.md
ducktape/2025-11-20-00/code/wt/: devenv.nix  pyproject.toml
ducktape/2025-11-26-00/code/adgn/: .dockerignore  .gitignore  devenv.nix  pyproject.toml
ducktape/2026-01-17-00/code/: .ansible-lint.yaml  .bazelignore  .bazelrc  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .puppeteerrc.cjs  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  STYLE.md  TODO.md  WORKSPACE.bazel  conftest.py  filter_wheels.bzl  flake.nix  mypy.ini  package.json  pyproject.toml  requirements_bazel.txt  ruff.toml
ducktape/2026-01-17-00/code/.claude/: settings.json
ducktape/2026-01-17-00/code/.github/: COPILOT_INSTRUCTIONS.md
ducktape/2026-01-17-00/code/adgn/: .dockerignore  AGENTS.md  BUILD.bazel  README.md
ducktape/2026-01-17-00/code/agent_core/: BUILD.bazel  agent.py  compaction_prompt.md  conftest.py  events.py  handler.py  test_handlers.py  test_mcp_integration.py  test_message_processing.py  test_testing_infrastructure.py  test_tool_execution.py  transcript_handler.py  turn_limit.py
ducktape/2026-01-17-00/code/agent_core_testing/: BUILD.bazel  __init__.py  assertions.py  fixtures.py  matchers.py  openai_mock.py  responses.py  steps.py
ducktape/2026-01-17-00/code/agent_pkg/: README.md
ducktape/2026-01-17-00/code/agent_server/: BUILD.bazel  README.md  agent_types.py  approvals.py  conftest.py  logging_config.py  matrix_bot.py  pytest_runner.py  test_approval_integration.py  test_default_approval_policy.py  test_exec_roundtrip.py  test_mcp_integration.py  test_mcp_notifications_flow.py  test_mcp_resources_flow.py  test_notifications_handler.py  test_policy_eval_abort_on_error.py  test_rendering_instructions.py  test_runtime_timeout.py  ui_asserts.py
ducktape/2026-01-17-00/code/arg0_runner/: BUILD.bazel  runner.py  setup.py  test_unified_patch.py  unified_patch.py
ducktape/2026-01-17-00/code/bazelization/: STATUS.md
ducktape/2026-01-17-00/code/claude-commands/: TODO.md  organize-code.md
ducktape/2026-01-17-00/code/claude-commands-old/: bad.md  codereview.md  compress-to-spec.md  course.md  interact.md  rulelint.md
ducktape/2026-01-17-00/code/cli_util/: BUILD.bazel  decorators.py  logging.py
ducktape/2026-01-17-00/code/cluster/: .envrc  .gitignore  .tflint.hcl  AGENTS.md  README.md  bootstrap.sh  shell.nix  terraform.tf
ducktape/2026-01-17-00/code/difftree/: BUILD.bazel  TODO.md  __init__.py  __main__.py  config.py  diff_tree.py  progress_bar.py  test_cli.py  test_config.py  test_diff_tree.py  test_e2e.py  test_parser.py  test_progress_bar.py  test_snapshots.py  test_tree.py  tree.py
ducktape/2026-01-17-00/code/docs/: ansible-lint-performance.md  ci-unification-plan.md  claude-code-shell.md  gazelle-python-status.md  linting.md  markdown-formatting.md  nix-installation-timing.md
ducktape/2026-01-17-00/code/dotfiles/: .gitignore-global  AGENTS.md  README.md  npmrc  pam_environment  profile  rcrc
ducktape/2026-01-17-00/code/ember/: BUILD.bazel  README.md  matrix_client.py  mcp_tools.py  runtime.py  test_documentation_snippets.py  test_matrix_client.py  test_python_session.py
ducktape/2026-01-17-00/code/experimental/: webcam-record
ducktape/2026-01-17-00/code/finance/: BUILD.bazel  gnucash_util.py
ducktape/2026-01-17-00/code/gatelet/: .gitignore  AGENTS.md  BUILD.bazel  Makefile  README.md  alembic.ini  aw_summary.py  gatelet-report.example.toml  manage.py
ducktape/2026-01-17-00/code/git_commit_ai/: BUILD.bazel  agent_backend.py  cli.py  conftest.py  test_amend.py  test_editor.py  test_stage_all.py
ducktape/2026-01-17-00/code/gmail_archiver/: AGENTS.md  BUILD.bazel  README.md  __main__.py  date_patterns.py  dirs.py  event_classifier.py  filter_planner.py  filter_sync.py  gmail_api_models.py  gmail_client.py  gmail_yaml_filters_models.py  html_utils.py  models.py  plan.py  plan_display.py  test_gmail_link.py
ducktape/2026-01-17-00/code/gnome_terminal_profile_switcher/: BUILD.bazel  __init__.py
ducktape/2026-01-17-00/code/headscale_cleanup/: BUILD.bazel
ducktape/2026-01-17-00/code/homeassistant/: android_bt_reporting.yaml  requirements.txt
ducktape/2026-01-17-00/code/inop/: BUILD.bazel  __init__.py  conftest.py  test_config.py  test_exclusion_patterns.py  test_file_truncation.py  test_optimizer_two_iters.py
ducktape/2026-01-17-00/code/inventree_utils/: BUILD.bazel  NOTES.txt  TODO  make_prompt.py  tasks.py
ducktape/2026-01-17-00/code/llm/: core.txt  deploy.sh  slash.txt
ducktape/2026-01-17-00/code/mcp_infra/: BUILD.bazel  client_helpers.py  conftest.py  mcp_types.py  mount_types.py  mounted.py  prefix.py  test_types.py  tool_schemas.py
ducktape/2026-01-17-00/code/mcp_starter/: BUILD.bazel  README.md  example_config.json  integration_test.py  test_server.py
ducktape/2026-01-17-00/code/mcp_utils/: BUILD.bazel  resources.py
ducktape/2026-01-17-00/code/net_util/: BUILD.bazel  __init__.py  net.py
ducktape/2026-01-17-00/code/nix/: BUILD.bazel  README.md  TODO.md
ducktape/2026-01-17-00/code/openai_utils/: model.py  (+11 more)
ducktape/2026-01-29-00/code/: .bazelignore  .bazelrc  .clippy.toml  .envrc  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierrc.cjs  .yamllint.yaml  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  STYLE.md  TODO.md  bazel_util.py  conftest.py  eslint.config.js  filter_wheels.bzl  flake.nix  mypy.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements_bazel.txt  ruff.toml  runfiles.py  xml_conduit_deps.bzl
ducktape_llm_common/2026-01-03-00/code/: .claude-linter.toml.old  .gitignore  CLAUDE.md  README.md  TODO.md  claude_code_hooks_examples.md  claude_linter_spec.md  config.toml.example  example-settings.json  pyproject.toml  pytest.ini
gmail-archiver/2025-12-17-00/code/: .envrc  .gitignore  README.md  devenv.nix  pyproject.toml
(+6347 files in other folders)
