# Gazelle exclusions
# Most .gitignore patterns are handled by .bazelignore (root-level directories)
# or don't need exclusion (cache dirs with no .py files like __pycache__)
# gazelle:exclude ansible

# gazelle:python_root
# gazelle:python_library_naming_convention $package_name$_lib

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm_ducktape//:defs.bzl", "npm_link_all_packages")
load("@proxy_config//:proxy_env.bzl", "PROXY_ENV")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python/uv:lock.bzl", "lock")

package(default_visibility = ["//visibility:public"])

# Link workspace npm packages
npm_link_all_packages(name = "node_modules")

# Export workspace files for npm_translate_lock data tracking
exports_files([
    ".clippy.toml",
    ".yamllint.yaml",
    "mypy.ini",
    "package.json",
    "pnpm-workspace.yaml",
    "requirements_bazel.txt",
    "ruff.toml",
])

# ESLint configuration as js_library
# This makes the config and its npm dependencies available to the ESLint aspect
# no-lint: This is a config file, not a target to lint (avoids aspect self-application)
js_library(
    name = "eslintrc",
    srcs = ["eslint.config.js"],
    tags = ["no-lint"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/@typescript-eslint/eslint-plugin",
        ":node_modules/@typescript-eslint/parser",
        ":node_modules/eslint-plugin-import",
        ":node_modules/eslint-plugin-react",
        ":node_modules/eslint-plugin-svelte",
        ":node_modules/globals",
        ":node_modules/svelte-eslint-parser",
    ],
)

# Prettier configuration as js_library
# This makes the config and prettier-plugin-svelte available in runfiles.
# Without this, prettier finds config in source tree but can't resolve plugins
# because node_modules doesn't exist in CI. See aspect-build/rules_lint#176.
# no-lint: This is a config file, not a target to lint (avoids aspect self-application)
js_library(
    name = "prettierrc",
    srcs = [".prettierrc.cjs"],
    tags = ["no-lint"],
    deps = [
        ":node_modules/prettier-plugin-svelte",
        ":node_modules/svelte",
    ],
)

# Single consolidated pyproject.toml for all Python dependencies
# Per-package pyproject.toml files are no longer used - all deps are in root pyproject.toml
_PYPROJECT_SRCS = [
    "//:pyproject.toml",
]

# Generate requirements_bazel.txt from all pyproject.toml files
# Run: bazel run //:requirements.update
# Note: PROXY_ENV is loaded from @proxy_config//:proxy_env.bzl which is
# auto-generated by the proxy_config module extension based on environment.
# Locally: empty dict. On CC web: proxy settings from BAZEL_PROXY_PORT env.
lock(
    name = "requirements",
    srcs = _PYPROJECT_SRCS,
    out = "requirements_bazel.txt",
    args = ["--all-extras"],
    env = PROXY_ENV,
)

# Test that requirements_bazel.txt is up to date
# Run: bazel test //:requirements_test
native_test(
    name = "requirements_test",
    src = ":requirements.update",
    tags = [
        "no-cache",
        "requires-network",
    ],
)

platform(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Gazelle Python configuration
# Running without manifest due to system packages (pygobject, dbus-python, pycairo)
# that require unavailable libraries. Gazelle will still:
# - Generate py_library/py_test targets
# - Infer local dependencies
# - Detect test files
# Manual dependency management needed for: @pypi packages, system packages
gazelle_binary(
    name = "gazelle_python_binary",
    languages = ["@rules_python_gazelle_plugin//python"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_python_binary",
)

# Format Bazel files
buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

# Check Bazel formatting
buildifier(
    name = "buildifier.check",
    lint_mode = "warn",
    mode = "diff",
)

# NOTE: Alejandra (Nix formatter) handled via pre-commit, not Bazel
# Nix formatters don't integrate well with aspect_rules_lint's unified format workflow
# See .pre-commit-config.yaml for alejandra configuration

# Ducktape wheel - bundles CLI tools for distribution
py_package(
    name = "ducktape_pkg",
    packages = [
        "agent_core",
        "cli_util",
        "difftree",
        "git_commit_ai",
        "gmail_archiver",
        "gmail_archiver.cli",
        "gmail_archiver.planners",
        "mcp_infra",
        "mcp_utils",
        "openai_utils",
    ],
    deps = [
        "//difftree:difftree_lib",
        "//git_commit_ai:git_commit_ai_lib",
        "//gmail_archiver:gmail_archiver_lib",
    ],
)

py_wheel(
    name = "ducktape_wheel",
    distribution = "ducktape",
    entry_points = {
        "console_scripts": [
            "git-commit-ai = git_commit_ai.cli:main",
            "difftree = difftree.__main__:main",
            "gmail-archiver = gmail_archiver.__main__:app",
        ],
    },
    python_requires = ">=3.13",
    requires = [
        # git_commit_ai deps
        "aiodocker",
        "anyio",
        "compact-json",
        "fastmcp>=2.0",
        "httpx",
        "jinja2",
        "mako>=1.3",
        "mcp",
        "openai",
        "pydantic>=2.0",
        "pyhamcrest",
        "pygit2>=1.14",
        "rich",
        "structlog",
        "tenacity",
        "typer",
        # difftree deps
        "click>=8.0",
        "unidiff>=0.7.0",
        # gmail_archiver deps
        "beautifulsoup4",
        "email-reply-parser",
        "google-api-python-client",
        "google-auth-httplib2",
        "google-auth-oauthlib",
        "pydantic-settings",
        "python-dateutil",
        "pyyaml",
    ],
    version = "0.1.0",
    deps = [":ducktape_pkg"],
)
