# Gazelle exclusions
# Most .gitignore patterns are handled by .bazelignore (root-level directories)
# or don't need exclusion (cache dirs with no .py files like __pycache__)
# gazelle:exclude ansible
# gazelle:exclude homeassistant  # TODO: merge @pypi_homeassistant into @pypi to enable Gazelle here
# gazelle:exclude claude/claude_hooks  # complex internal imports
# gazelle:exclude k8s-old  # legacy k8s configs, deps not in main requirements

# gazelle:python_root
# gazelle:python_generation_mode file
# gazelle:python_default_visibility NONE
# gazelle:python_manifest_file_name tools/gazelle_python.yaml
#
# Bazel-provided libraries (not from PyPI)
# gazelle:resolve py rules_python.python.runfiles @rules_python//python/runfiles
# gazelle:resolve py python.runfiles @rules_python//python/runfiles
#
# Non-standard import paths (import name doesn't match directory structure)
# gazelle:resolve py adgn_mcp_starter //mcp_starter/adgn_mcp_starter
# gazelle:resolve py adgn_mcp_starter.server //mcp_starter/adgn_mcp_starter:server
# gazelle:resolve py samplebooks_parts_data //inventree_utils:samplebooks_parts_data
#
# Root-level targets
# gazelle:resolve py bazel_util //:bazel_util
# gazelle:resolve py fmt_util.fmt_util //fmt_util:fmt_util

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")
load("@npm_ducktape//:defs.bzl", "npm_link_all_packages")
load("@proxy_config//:proxy_env.bzl", "PROXY_ENV")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python/uv:lock.bzl", "lock")

# Visibility is controlled per-target. Gazelle uses python_default_visibility NONE
# so targets default to private. Public targets explicitly set visibility.

# Link workspace npm packages
npm_link_all_packages(name = "node_modules")

# Export workspace files for npm_translate_lock data tracking
exports_files([
    "mypy.ini",
    "package.json",
    "pnpm-workspace.yaml",
    "requirements_bazel.txt",
    "ruff.toml",
])

# Root conftest.py for shared pytest configuration
# Tests can depend on this for pytest-asyncio auto mode and common markers
py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//docker",
        "@pypi//pytest",
    ],
)

# Utilities for Bazel-run tools (e.g., resolving BUILD_WORKING_DIRECTORY)
py_library(
    name = "bazel_util",
    srcs = ["bazel_util.py"],
    visibility = ["//:__subpackages__"],
)

# Runfiles utilities for locating binaries and data files
py_library(
    name = "runfiles",
    srcs = ["runfiles.py"],
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)

# ESLint configuration as js_library
# This makes the config and its npm dependencies available to the ESLint aspect
# no-lint: This is a config file, not a target to lint (avoids aspect self-application)
js_library(
    name = "eslintrc",
    srcs = ["eslint.config.js"],
    tags = ["no-lint"],
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/@typescript-eslint/eslint-plugin",
        ":node_modules/@typescript-eslint/parser",
        ":node_modules/eslint-plugin-import",
        ":node_modules/eslint-plugin-react",
        ":node_modules/eslint-plugin-svelte",
        ":node_modules/globals",
        ":node_modules/svelte-eslint-parser",
    ],
)

# Prettier configuration as js_library
# This makes the config and prettier-plugin-svelte available in runfiles.
# Without this, prettier finds config in source tree but can't resolve plugins
# because node_modules doesn't exist in CI. See aspect-build/rules_lint#176.
# no-lint: This is a config file, not a target to lint (avoids aspect self-application)
js_library(
    name = "prettierrc",
    srcs = [".prettierrc.cjs"],
    tags = ["no-lint"],
    visibility = ["//tools:__subpackages__"],
    deps = [
        ":node_modules/prettier-plugin-svelte",
        ":node_modules/svelte",
    ],
)

# Generate requirements_bazel.txt from all pyproject.toml files
# Run: bazel run //:requirements.update
#
# IMPORTANT: This target requires direct network access to PyPI for dependency resolution.
# It cannot run in sandboxed CI environments or with remote execution. When building
# all targets, exclude it: `bazel build //... -- -//:requirements`
#
# Note: PROXY_ENV is loaded from @proxy_config//:proxy_env.bzl which is
# auto-generated by the proxy_config module extension based on environment.
# Locally: empty dict. On CC web: proxy settings from AUTH_PROXY_PORT env.
lock(
    name = "requirements",
    srcs = ["pyproject.toml"],
    out = "requirements_bazel.txt",
    args = ["--all-extras"],
    env = PROXY_ENV,
)

# Test that requirements_bazel.txt is up to date
# Run: bazel test //:requirements_test
native_test(
    name = "requirements_test",
    src = ":requirements.update",
    tags = [
        "no-cache",
        "requires-network",
    ],
)

platform(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Ducktape wheel - bundles CLI tools for distribution
py_package(
    name = "ducktape_pkg",
    packages = [
        "agent_core",
        "cli_util",
        "difftree",
        "fmt_util",
        "git_commit_ai",
        "gmail_archiver",
        "gmail_archiver.cli",
        "gmail_archiver.planners",
        "mcp_infra",
        "mcp_utils",
        "openai_utils",
    ],
    deps = [
        "//difftree:__main__",
        "//git_commit_ai:git_commit_ai_lib",
    ],
)

py_wheel(
    name = "wheel",
    distribution = "ducktape",
    entry_points = {
        "console_scripts": [
            "git-commit-ai = git_commit_ai.cli:main",
            "difftree = difftree.__main__:main",
            "gmail-archiver = gmail_archiver.__main__:app",
        ],
    },
    python_requires = ">=3.13",
    requires = [
        # git_commit_ai deps
        "aiodocker",
        "anyio",
        "compact-json",
        "fastmcp>=2.0",
        "httpx",
        "jinja2",
        "mako>=1.3",
        "mcp",
        "openai",
        "pydantic>=2.0",
        "pyhamcrest",
        "pygit2>=1.14",
        "rich",
        "structlog",
        "tenacity",
        "typer",
        # difftree deps
        "click>=8.0",
        "unidiff>=0.7.0",
        # gmail_archiver deps
        "beautifulsoup4",
        "email-reply-parser",
        "google-api-python-client",
        "google-auth-httplib2",
        "google-auth-oauthlib",
        "pydantic-settings",
        "python-dateutil",
        "pyyaml",
    ],
    version = "0.1.0",
    deps = [":ducktape_pkg"],
)
