[project]
name = "gmail-archiver"
version = "0.1.0"
description = "Auto-archive old Gmail emails based on extracted dates"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "python-dateutil>=2.8.0",
    "email-reply-parser>=0.5.12",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
gmail-archiver = "gmail_archiver.__main__:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
