[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wt"
version = "0.0.0"
description = "Worktree management CLI and daemon"
authors = [{ name = "Rai" }]
requires-python = ">=3.11,<3.14"
dependencies = [
  "anyio>=4.0",
  "click>=8.0",
  "colorama>=0.4",
  "pluggy>=1.3",
  "psutil>=5.9",
  "punq>=0.6.2",
  "pydantic>=2.0",
  "pygit2>=1.18",
  "types-pygit2>=1.15.0",
  "tabulate>=0.9",
  "tenacity>=8.2.0",
  "typer>=0.12",
  "watchdog>=4.0",
  "PyGithub>=1.77",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-env>=1.1",
  "pytest-mock>=3.10",
  "pytest-timeout>=2.3",
  "pytest-xdist>=3.0",
  "pyhamcrest>=2.1",
  "ruff>=0.5",
  "mypy>=1.14",
  "types-colorama",
  "types-psutil",
  "types-PyYAML",
  "types-tabulate",
]

[project.scripts]
wt = "wt.cli:main"
wt-install = "wt.shell.install:main"

[project.entry-points."wt.plugins"]
wt_demo = "wt.demo_plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wt*"]

[tool.setuptools.package-data]
"wt.shell" = ["wt.sh"]

[tool.pytest.ini_options]
timeout = 30
timeout_method = "thread"
addopts = [
    "-m",
    "not real_github",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "integration: integration tests that talk to real git repositories",
    "unit: fast unit tests",
    "shell: shell integration tests using fd3 redirection",
    "real_github: tests that require network access to GitHub",
    "asyncio: tests that use pytest-asyncio",
    "slow: slow tests",
]
testpaths = ["tests"]
